--- a/source/cv.html.erb
+++ b/source/cv.html.erb
@@ -1,13 +1,13 @@
 <section class="cv">
   <h3>Education</h3>
-    <p>I graduated from the School of Journalism at University of Missouri with a <span>Strategic Communication Design</span> degree in 2009, but I always look for ways to keep learning.</p>
+    <p>I graduated from the School of Journalism at University of Missouri with a <strong>Strategic Communication Design</strong> degree in 2009, but I always look for ways to keep learning.</p>
     <p>Recently, I participated in <a href="http://thecomradery-gettingatwhy-eorg.eventbrite.com"><i>Getting at Why: Understanding People and the Design Process<i></a>, a workshop led by <br>Julka Almquist at IDEO and organized by a fantastic startup <a href="http://thecomradery.com">The Comradery</a>.</p>
     <p>I'm also a graduate of <a href="">Starter League's</a> Spring 2013 Advanced HTML and CSS course.</p>
   <h3>Experience</h3>
     
-    <p>Since early 2011, I've worked as a <span>Designer at Morningstar</span>. Collaborating with a team of designers, analysts, and developers on a variety of print, interactive, and visualization projects, I've helped make complex financial data clear, compelling, and beautiful.
+    <p>Since early 2011, I've worked as a <strong>Designer at Morningstar</strong>. Collaborating with a team of designers, analysts, and developers on a variety of print, interactive, and visualization projects, I've helped make complex financial data clear, compelling, and beautiful.
     </p>
-    <p>Prior to joining Morningstar, I was the <span>Art Director at Design Bureau</span>, a design and architecture magazine based in Chicago. I developed the grid structure, typographic system, and overall visual language for the first issue. Following the launch, my duties included issue layout and production, feature design, and design and development of the magazine’s site.</p>
-    <p>As an <span>Art Assistant for Jeremy Scott</span> in Los Angeles, I worked closely with the designer on artwork, prints, and patterns for his eponymous label, as well as capsule collections for Adidas Originals.
+    <p>Prior to joining Morningstar, I was the <strong>Art Director at Design Bureau</strong>, a design and architecture magazine based in Chicago. I developed the grid structure, typographic system, and overall visual language for the first issue. Following the launch, my duties included issue layout and production, feature design, and design and development of the magazine’s site.</p>
+    <p>As an <strong>Art Assistant for Jeremy Scott</strong> in Los Angeles, I worked closely with the designer on artwork, prints, and patterns for his eponymous label, as well as capsule collections for Adidas Originals.
     </p>
 </section>
