--- a/source/work.html.erb
+++ b/source/work.html.erb
@@ -1,9 +1,11 @@
 <article class="projects">
-<!--   <section class="" id="booth">
-    <h4>Stereoscopic.gif Photo Booth</h4>
-    <p>Created for the Chicago Design Museum, Stereoscopic.gif Photo Booth is a celebration of special, temporary spaces, and participatory engagement.</p>
+  <section class="" id="booth">
+      <p>Created for Chicago Design Museum's 2013 show, <strong>Stereoscopic.gif Photo Booth</strong> is a celebration of special, temporary spaces, and participatory engagement.</p>
     <p><a class="button" href="http://www.stereogif.me">VIEW PROJECT ➔</a></p>
   </section>
+<!--   <section class="" id="difference">
+    <p><a class="button" href="http://www.stereogif.me">VIEW PROJECT ➔</a></p>
+  </section>   
   <section class="" id="morningstar">
     <h4>Morningstar, Inc</h4>
     <p></p>
@@ -11,10 +13,6 @@
   <section class="" id="designbureau">
     <h4>Design Bureau</h4>
     <p></p>
-  </section>
-  <section class="" id="difference">
-    <h4>Différence</h4>
-    <p></p>
-  </section>  -->
+  </section> -->
 </article>
 
