--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -123,7 +123,7 @@ a:hover {
 
 a.button {
   text-decoration: none;
-  border: 4px solid rgb(17,34,204);
+  border: 3px solid rgb(17,34,204);
   color: rgb(17,34,204);
   letter-spacing: 1px;
   font-size: .8em;
@@ -144,7 +144,7 @@ p {
   font-size: 20px;
   line-height: 1.5em;
   margin-bottom: 1.5em;
-  span {
+  strong {
     font-weight: 700;   
   } 
 }
@@ -159,22 +159,28 @@ p {
   }
 }
 
+.projects {
+  max-width: 768px;
+  margin: auto;
+}
+
 .projects section {
   min-height: 400px;
-  margin: auto;
-  padding: 40px 20px 20px 230px;
+  margin: 0 0 2em 0;
+  padding: 130px 20px 20px 230px;
 }
 
 #booth {
-  background-image: url("../images/booth.png");
+  background-image: url("../images/stereo.jpg");
+  background-position: 50%, 50%;
   background-repeat: no-repeat;
-  background-size: 280px;
-  background-position: bottom left;
   background-color: rgba(0, 0, 0,.1);
 }
 
 #morningstar {
   background-color: rgba(0, 0, 0,0.15);
+  width: 47.5%;
+  display: inline-block;  
 }
 
 #designbureau {
@@ -182,7 +188,15 @@ p {
 }
 
 #difference {
-  background-color: rgba(0,0,0,0.25);
+  background-image: url("../images/diff.gif");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: rgba(0, 0, 0, 1);  
+  width: 47.5%;
+  margin-right: 5%;
+  display: inline-block;
+  padding: 130px 20px 20px 10px;
+
 }
 
 @media screen and (max-width: 809px) {
